2003-08-27  Theodore A. Roth  <troth@openavr.org>

	* main.c (update_progress_no_tty): Properly terminate progress. Also
	fixes stk500 problem where number of bytes written is less than a page.

2003-08-27  Theodore A. Roth  <troth@openavr.org>

	* avrdude.spec.in: Fix broken rpmbuild on RedHat-9.

2003-08-25  Eric B. Weddington  <eric@ecentral.com>

	* fileio.c: 
	* main.c: 
	* ppiwin.c:
	* ser_posix.c:
	* stk500.c:
	Minor code cleanup to remove warnings.

2003/08/21  Brian S. Dean  <bsd@bsdhome.com>

	* avrdude.1:
	* main.c:

	Introduce a new option, -U, for performing memory operions.
	Its argument is a 4 field string (fields seperated by colons)
	which indicate what memory type to operate on, what operation
	to perform is (read, write, or verify), the filename to read
	from, write to, or verify against, and an optional file format
	field.  Multple -U options can be specified to operate on more
	than one memory at a time with a single invocation.  For
	example, to update both the flash and the eeprom at the same
	time one can now specify the following:

	avrdude -p -e -U flash:w:main.hex:i -U eeprom:w:eeprom.hex:i

2003-08-01  Theodore A. Roth  <troth@openavr.org>

	* avrdude.1: Document the -q option.
	* doc/avrdude.texi: Document the -q option.
	Fix some typos left over from pasting in man output.

2003-07-30  Brian S. Dean  <bsd@bsdhome.com>

	* main.c: Add elapsed time information to the new progress bar.

2003-07-29  Theodore A. Roth  <troth@openavr.org>

	* avr.c:
	* avr.h:
	* avr910.c:
	* main.c:
	* stk500.c:
	New progress reporting implementation.

2003-07-24  Joerg Wunsch  <j@uriah.heep.sax.de>

	* avrdude.1:
	* doc/avrdude.texi:
	* pgm.c:
	* pgm.h:
	* stk500.c:
	* stk500_private.h:
	* term.c: Add support for displaying and setting the various
	operational parameters of the STK500 (Vtarget, Varef, clock).

2003-05-13  Theodore A. Roth  <troth@openavr.org>

	* avr910.c (avr910_paged_write_flash): Add code to send the 'm'